force-app/main/default/objects/Delivery_Bay_Booking__c/fields/Delivery_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Formatted__c</fullName>
    <formula>IF( ISBLANK(Delivery_Date__c), &apos;&apos;, IF ( LEN(TEXT(DAY( Delivery_Date__c ))) &gt; 1, &apos;&apos;, &apos;0&apos;) + TEXT(DAY( Delivery_Date__c ))) + &apos;-&apos; + CASE( MONTH( Delivery_Date__c ) ,
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;) + &apos;-&apos; + RIGHT(TEXT(YEAR( Delivery_Date__c )), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Date Formatted</label>
    <type>Text</type>
</CustomField>