force-app/main/default/objects/Delivery_Bay_Booking__c/fields/Display_Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Display_Sales_Agreement__c</fullName>
    <formula>IF(ISBLANK(Sales_Agreement__c),  MB_Sales_Agreement__c ,  Sales_Agreement__r.SOH_SONO__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Sales Agreement</label>
    <type>Text</type>
</CustomField>