force-app/main/default/objects/Delivery_Bay_Booking__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>Start_Time__c + (Duration_Minutes__c*60000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>Time</type>
</CustomField>