force-app/main/default/objects/Delivery_Bay_Booking__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>IF(ISBLANK(Sales_Agreement__c),  MB_Sales_Agreement__r.Variant__c , Sales_Agreement__r.Package_Header__r.Model_Master__r.Model_Description__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variant</label>
    <type>Text</type>
</CustomField>