force-app/main/default/objects/Delivery_Bay_Booking__c/fields/Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_No__c</fullName>
    <formula>IF(ISBLANK(Sales_Agreement__c), MB_Sales_Agreement__r.Registration_Number__c, Sales_Agreement__r.SOH_REGNO__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration No</label>
    <type>Text</type>
</CustomField>