force-app/main/default/objects/Delivery_Bay_Booking__c/fields/Room_No__c.field-meta.xml
<CustomField>
    <fullName>Room_No__c</fullName>
    <label>Room No.</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>