force-app/main/default/objects/Delivery_Bay_Booking__c/fields/Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number__c</fullName>
    <formula>IF(ISBLANK( MB_Sales_Agreement__c ), Sales_Agreement__r.Name , MB_Sales_Agreement__r.Name )</formula>
    <label>Vehicle Number</label>
    <type>Text</type>
</CustomField>