force-app/main/default/objects/Delivery_Bay_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FranchiseCode__c</columns>
    <columns>Registration_No__c</columns>
    <columns>Commcase_No__c</columns>
    <columns>NAME</columns>
    <columns>Service_Centre__c</columns>
    <columns>Room_No__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Status__c</columns>
    <columns>End_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>