force-app/main/default/objects/Delivery_Bay_Booking__c/listViews/To_be_delivered.listView-meta.xml
<ListView>
    <fullName>To_be_delivered</fullName>
    <columns>NAME</columns>
    <columns>Service_Centre__c</columns>
    <columns>Room_No__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>FranchiseCode__c</columns>
    <columns>Registration_No__c</columns>
    <columns>Commcase_No__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Booked</value>
    </filters>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <label>Car to be delivered tomorrow</label>
</ListView>